# fib-task

./: CMakeLists.txt
src/: fibby.cpp  main.cpp
src/inc/: fibby.hpp
